Fix car campaign and menu item alignments

--- a/app/assets/stylesheets/layout/page_specific/_car_campaign.scss
+++ b/app/assets/stylesheets/layout/page_specific/_car_campaign.scss
@@ -21,7 +21,7 @@
     height: 600px;
     left: 0;
     position: absolute;
-    top: 86px;
+    top: 72px;
     width: 100%;
     z-index: -1;
   };
